chrome/test/base/chrome_render_view_test.cc
@@ -106,7 +106,7 @@ void ChromeRenderViewTest::SetUp() {
   ChromeUnitTestSuite::InitializeProviders();
   ChromeUnitTestSuite::InitializeResourceBundle();
 
-  chrome_render_thread_ = new ChromeMockRenderThread();
+  chrome_render_thread_ = CreateMockRenderThread();
   render_thread_.reset(chrome_render_thread_);
 
   content::RenderViewTest::SetUp();
@@ -189,4 +189,8 @@ void ChromeRenderViewTest::DisableUserGestureSimulationForAutofill() {
 void ChromeRenderViewTest::WaitForAutofillDidAssociateFormControl() {
   static_cast<MockAutofillAgent*>(autofill_agent_)
       ->WaitForAutofillDidAssociateFormControl();
+}
+
+ChromeMockRenderThread* ChromeRenderViewTest::CreateMockRenderThread() {
+  return new ChromeMockRenderThread();
 }
